Fix login and removes imageProfile and username from User model
